=== HEAD

* Fix Database#indexes on DB2 (jeremyevans)

* Make DateTime/Time columns with Sequel::CURRENT_TIMESTAMP default values use timestamp column on MySQL (jeremyevans)

* Wrap column default values in extra parens on SQLite, fixes some cases (jeremyevans)

* Make Database#indexes not include primary key indexes on Derby, HSQLDB, Oracle, and DB2 using the jdbc adapter (jeremyevans)

* Support Database#indexes in shared MSSQL adapter (jeremyevans)

* Support :include option when creating indexes on MSSQL, for storing column values in the index (crawlik) (#426)

* Make set_column_type not modify defaults and NULL/NOT NULL setting on MSSQL, H2, and SQLite (jeremyevans)

* Qualify identifiers when filtering/excluding by associations (jeremyevans)

* Make table_exists? better handle tables where you don't have permissions for all columns (jeremyevans) (#422)

* Using new association options, support associations based on columns that clash with ruby method names (jeremyevans) (#417)

* Add use_after_commit_rollback setting to models, can be turned off to allow model usage with prepared transactions (jeremyevans)

* Fix alter table emulation on SQLite when foreign keys reference the table being altered (jeremyevans)

* Fix progress shared adapter, broken since the dataset literalization refactoring (jeremyevans) (#414)

* Support :map and :to_hash prepared statement types (jeremyevans)

* Make Dataset#naked! work correctly (jeremyevans)

* Remove Dataset#paginate!, as it was broken (jeremyevans)

* Fix query extension to not break usage of #clone without arguments (jeremyevans) (#413)

=== 3.31.0 (2012-01-03)

* Dataset#from no longer handles :a__b__c___d as a.b.c AS d (jeremyevans)

* Support many_to_one associations with the same name as their column, using the :key_column option (jeremyevans)

* Add Model.def_column_alias for defining alias methods for columns (jeremyevans)

* Support :server option in Dataset#import and #multi_insert (jeremyevans)
